<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="22dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/main_tv_title"
        style="@style/Main.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/main_tv_title"
        android:layout_alignRight="@id/main_tv_title"
        android:layout_below="@id/main_tv_title"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_btn_movies"
            style="@style/Main.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies"/>

        <Button
            android:id="@+id/main_btn_stock"
            style="@style/Main.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_hawk"/>

        <Button
            android:id="@+id/main_btn_build"
            style="@style/Main.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"/>

        <Button
            android:id="@+id/main_btn_material"
            style="@style/Main.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_your_app_material"/>

        <Button
            android:id="@+id/main_btn_ubiquitous"
            style="@style/Main.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_ubiquitous"/>

        <Button
            android:id="@+id/main_btn_capstone"
            style="@style/Main.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"/>

    </LinearLayout>

</RelativeLayout>
